--- a/style.css
+++ b/style.css
@@ -85,14 +85,14 @@ header .header_container .header_partner_container .partner_div {
   margin: 4rem 6rem;
 }
 .hero_box .hero_item2 input {
-  width: 32%;
+  width: 28%;
   padding: 0.5rem 0.9rem;
   font-size: 1rem;
   border-radius: 3px;
   border: 2px solid white;
 }
 .hero_box .hero_item2 button {
-  width: 26%;
+  width: 24%;
   padding: 0.5rem 0.9rem;
   background-color: #FFA308;
   font-weight: 900;
@@ -163,6 +163,10 @@ header .header_container .header_partner_container .partner_div {
 }
 
 .promotion {
+  width: 80%;
+  margin: 0 auto;
+}
+.promotion .promotion_item {
   width: 100%;
   margin-top: 4rem;
 }
