--- a/input.scss
+++ b/input.scss
@@ -368,97 +368,97 @@ footer {
     }
 }
 
-@media only screen and (max-width: 600px) {
-    html {
-        font-size: 12px;
-    }
-    .header_container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
-    }
-    .header_logo_container {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        align-items: center;
-        width: 30%;
-}
-}
+// @media only screen and (max-width: 600px) {
+//     html {
+//         font-size: 12px;
+//     }
+//     .header_container {
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//         flex-direction: column;
+//     }
+//     .header_logo_container {
+//         display: flex;
+//         justify-content: space-between;
+//         flex-direction: column;
+//         align-items: center;
+//         width: 30%;
+// }
+// }
 
-@media only screen and (max-width: 600px) {
-    html {
-        font-size: 12px;
-    }
-   .motivation_item2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-   }
-   .motivation_item3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-   }
-}
+// @media only screen and (max-width: 600px) {
+//     html {
+//         font-size: 12px;
+//     }
+//    .motivation_item2 {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-direction: column;
+//    }
+//    .motivation_item3 {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-direction: column;
+//    }
+// }
 
-@media only screen and (max-width: 600px) {
-    html {
-        font-size: 12px;
-    }
-    .foot {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-    }
-}
-@media only screen and (max-width: 900px) {
-    html {
-        font-size: 12px;
-    }
-    .header_container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
-    }
-    .header_logo_container {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        align-items: center;
-        width: 30%;
-}
-}
+// @media only screen and (max-width: 600px) {
+//     html {
+//         font-size: 12px;
+//     }
+//     .foot {
+//         display: flex;
+//         justify-content: space-between;
+//         flex-direction: column;
+//     }
+// }
+// @media only screen and (max-width: 900px) {
+//     html {
+//         font-size: 12px;
+//     }
+//     .header_container {
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//         flex-direction: column;
+//     }
+//     .header_logo_container {
+//         display: flex;
+//         justify-content: space-between;
+//         flex-direction: column;
+//         align-items: center;
+//         width: 30%;
+// }
+// }
 
-@media only screen and (max-width: 900px) {
-    html {
-        font-size: 12px;
-    }
-   .motivation_item2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-   }
-   .motivation_item3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-   }
-}
+// @media only screen and (max-width: 900px) {
+//     html {
+//         font-size: 12px;
+//     }
+//    .motivation_item2 {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-direction: column;
+//    }
+//    .motivation_item3 {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     flex-direction: column;
+//    }
+// }
 
-@media only screen and (max-width: 900px) {
-    html {
-        font-size: 12px;
-    }
-    .foot {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-    }
-}
+// @media only screen and (max-width: 900px) {
+//     html {
+//         font-size: 12px;
+//     }
+//     .foot {
+//         display: flex;
+//         justify-content: space-between;
+//         flex-direction: column;
+//     }
+// }
